--- a/ImGUI.ui
+++ b/ImGUI.ui
@@ -298,28 +298,28 @@
       <item row="1" column="1">
        <widget class="QPushButton" name="pushButton_2">
         <property name="text">
-         <string>Delete all</string>
+         <string>Place holder</string>
         </property>
        </widget>
       </item>
       <item row="1" column="0">
        <widget class="QPushButton" name="LoadAll_Button">
         <property name="text">
-         <string>Delete Selection</string>
+         <string>Place holder - Delete all</string>
         </property>
        </widget>
       </item>
       <item row="0" column="0">
        <widget class="QPushButton" name="pushButton_10">
         <property name="text">
-         <string>Duplicate</string>
+         <string>Place Holder - Duplicate</string>
         </property>
        </widget>
       </item>
       <item row="0" column="1">
        <widget class="QPushButton" name="pushButton_11">
         <property name="text">
-         <string>Save</string>
+         <string>Place holder - Delete</string>
         </property>
        </widget>
       </item>
