--- a/ImGUI.ui
+++ b/ImGUI.ui
@@ -402,7 +402,7 @@
                 <string>Histograms</string>
                </attribute>
                <layout class="QGridLayout" name="gridLayout_15">
-                <item row="0" column="0">
+                <item row="0" column="0" colspan="2">
                  <widget class="QWidget" name="hist_container_01" native="true"/>
                 </item>
                </layout>
@@ -715,8 +715,35 @@
             <string>MetaData</string>
            </attribute>
            <layout class="QGridLayout" name="gridLayout_9">
-            <item row="0" column="0">
-             <widget class="QTableWidget" name="MetaViewTable"/>
+            <item row="1" column="0">
+             <widget class="QLineEdit" name="lineEdit_64">
+              <property name="font">
+               <font>
+                <pointsize>10</pointsize>
+               </font>
+              </property>
+              <property name="text">
+               <string>Search</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="1">
+             <widget class="QLineEdit" name="metadata_search">
+              <property name="font">
+               <font>
+                <pointsize>10</pointsize>
+               </font>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="0" colspan="2">
+             <widget class="QTreeWidget" name="MetaViewTable">
+              <column>
+               <property name="text">
+                <string notr="true">1</string>
+               </property>
+              </column>
+             </widget>
             </item>
            </layout>
           </widget>
@@ -4559,7 +4586,6 @@ p, li { white-space: pre-wrap; }
   <tabstop>Skip_IrIS_Files</tabstop>
   <tabstop>Load_IrIS_Files</tabstop>
   <tabstop>lineEdit_7</tabstop>
-  <tabstop>MetaViewTable</tabstop>
   <tabstop>SagittalSlider</tabstop>
   <tabstop>IrIS_Sens_checkbox</tabstop>
   <tabstop>IrIS_Load_SensMap</tabstop>
