--- a/ImGUI.ui
+++ b/ImGUI.ui
@@ -390,7 +390,7 @@
            </font>
           </property>
           <property name="currentIndex">
-           <number>0</number>
+           <number>2</number>
           </property>
           <widget class="QWidget" name="tab_5">
            <attribute name="title">
@@ -438,14 +438,46 @@
                 <string>Brachy</string>
                </attribute>
                <layout class="QGridLayout" name="gridLayout_45">
-                <item row="1" column="3">
-                 <widget class="QCheckBox" name="display_dw_overlay">
+                <item row="1" column="0">
+                 <widget class="QComboBox" name="brachy_combobox_01"/>
+                </item>
+                <item row="2" column="2">
+                 <spacer name="horizontalSpacer_46">
+                  <property name="orientation">
+                   <enum>Qt::Horizontal</enum>
+                  </property>
+                  <property name="sizeHint" stdset="0">
+                   <size>
+                    <width>40</width>
+                    <height>20</height>
+                   </size>
+                  </property>
+                 </spacer>
+                </item>
+                <item row="1" column="5">
+                 <widget class="QCheckBox" name="display_brachy_channel_overlay">
                   <property name="text">
-                   <string>Show dwell</string>
+                   <string>Show channel</string>
                   </property>
                  </widget>
                 </item>
-                <item row="1" column="5">
+                <item row="0" column="0" colspan="7">
+                 <widget class="QTableWidget" name="brachy_table_01">
+                  <property name="font">
+                   <font>
+                    <pointsize>12</pointsize>
+                   </font>
+                  </property>
+                 </widget>
+                </item>
+                <item row="2" column="6">
+                 <widget class="QPushButton" name="brachy_export_dw_channels_csv">
+                  <property name="text">
+                   <string>Export</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="1" column="6">
                  <widget class="QCheckBox" name="overlay_all_channels">
                   <property name="text">
                    <string>All channels</string>
@@ -470,13 +502,6 @@
                   </property>
                  </widget>
                 </item>
-                <item row="1" column="4">
-                 <widget class="QCheckBox" name="display_brachy_channel_overlay">
-                  <property name="text">
-                   <string>Show channel</string>
-                  </property>
-                 </widget>
-                </item>
                 <item row="2" column="1">
                  <widget class="QSpinBox" name="dw_ch_point_size">
                   <property name="font">
@@ -489,7 +514,23 @@
                   </property>
                  </widget>
                 </item>
-                <item row="2" column="3" colspan="2">
+                <item row="1" column="1">
+                 <widget class="QSpinBox" name="brachy_spinBox_01">
+                  <property name="font">
+                   <font>
+                    <pointsize>10</pointsize>
+                   </font>
+                  </property>
+                 </widget>
+                </item>
+                <item row="1" column="4">
+                 <widget class="QCheckBox" name="display_dw_overlay">
+                  <property name="text">
+                   <string>Show dwell</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="2" column="4" colspan="2">
                  <spacer name="horizontalSpacer_45">
                   <property name="orientation">
                    <enum>Qt::Horizontal</enum>
@@ -502,46 +543,12 @@
                   </property>
                  </spacer>
                 </item>
-                <item row="2" column="5">
-                 <widget class="QPushButton" name="brachy_export_dw_channels_csv">
+                <item row="2" column="3">
+                 <widget class="QPushButton" name="pushButton_test">
                   <property name="text">
-                   <string>Export</string>
+                   <string>PushButton</string>
                   </property>
                  </widget>
-                </item>
-                <item row="1" column="1">
-                 <widget class="QSpinBox" name="brachy_spinBox_01">
-                  <property name="font">
-                   <font>
-                    <pointsize>10</pointsize>
-                   </font>
-                  </property>
-                 </widget>
-                </item>
-                <item row="1" column="0">
-                 <widget class="QComboBox" name="brachy_combobox_01"/>
-                </item>
-                <item row="0" column="0" colspan="6">
-                 <widget class="QTableWidget" name="brachy_table_01">
-                  <property name="font">
-                   <font>
-                    <pointsize>12</pointsize>
-                   </font>
-                  </property>
-                 </widget>
-                </item>
-                <item row="2" column="2">
-                 <spacer name="horizontalSpacer_46">
-                  <property name="orientation">
-                   <enum>Qt::Horizontal</enum>
-                  </property>
-                  <property name="sizeHint" stdset="0">
-                   <size>
-                    <width>40</width>
-                    <height>20</height>
-                   </size>
-                  </property>
-                 </spacer>
                 </item>
                </layout>
               </widget>
