--- a/ImGUI.ui
+++ b/ImGUI.ui
@@ -6588,21 +6588,96 @@ p, li { white-space: pre-wrap; }
        <attribute name="title">
         <string>Segmentation</string>
        </attribute>
-       <layout class="QGridLayout" name="gridLayout_seg_tab" columnstretch="5,1,2">
-        <item row="0" column="0" colspan="2">
-         <widget class="QWidget" name="VTK_SegView" native="true"/>
-        </item>
-        <item row="1" column="0">
+       <layout class="QGridLayout" name="gridLayout_seg_tab" rowstretch="1,0,0,0,0,3,0" columnstretch="5,1,0,1">
+        <item row="6" column="0">
          <widget class="QSlider" name="segViewSlider">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
           </property>
          </widget>
         </item>
-        <item row="1" column="1">
+        <item row="2" column="3">
+         <widget class="QSlider" name="threshMaxSlider">
+          <property name="minimum">
+           <number>-1024</number>
+          </property>
+          <property name="maximum">
+           <number>3000</number>
+          </property>
+          <property name="value">
+           <number>150</number>
+          </property>
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="3">
+         <widget class="QLineEdit" name="segStructureName"/>
+        </item>
+        <item row="6" column="1">
          <widget class="QComboBox" name="segSelectView"/>
         </item>
-        <item row="0" column="2">
+        <item row="2" column="2">
+         <widget class="QLineEdit" name="threshMaxBox">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="text">
+           <string>Min. HU threshold: 300 </string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="2" colspan="2">
+         <widget class="QWidget" name="VTK_SegHistView" native="true">
+          <layout class="QGridLayout" name="gridLayout_49"/>
+         </widget>
+        </item>
+        <item row="1" column="3">
+         <widget class="QSlider" name="threshMinSlider">
+          <property name="minimum">
+           <number>-1024</number>
+          </property>
+          <property name="maximum">
+           <number>3000</number>
+          </property>
+          <property name="value">
+           <number>-200</number>
+          </property>
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="tickPosition">
+           <enum>QSlider::NoTicks</enum>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="2">
+         <widget class="QLineEdit" name="threshMinBox">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="text">
+           <string>Min. HU threshold: -300 </string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="0" rowspan="6" colspan="2">
+         <widget class="QWidget" name="VTK_SegView" native="true"/>
+        </item>
+        <item row="5" column="2" rowspan="2" colspan="2">
          <widget class="QToolBox" name="seg_toolBox">
           <property name="autoFillBackground">
            <bool>false</bool>
@@ -6615,89 +6690,22 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>389</width>
-             <height>952</height>
+             <width>342</width>
+             <height>634</height>
             </rect>
            </property>
            <attribute name="label">
             <string>Thresholding</string>
            </attribute>
            <layout class="QGridLayout" name="gridLayout_segTools" rowstretch="1,0,0,1,1,1,3" columnstretch="0,0">
-            <item row="3" column="1">
-             <widget class="QSlider" name="threshMinSlider">
-              <property name="minimum">
-               <number>-1024</number>
-              </property>
-              <property name="maximum">
-               <number>3000</number>
-              </property>
-              <property name="value">
-               <number>-200</number>
-              </property>
-              <property name="orientation">
-               <enum>Qt::Horizontal</enum>
-              </property>
-              <property name="tickPosition">
-               <enum>QSlider::NoTicks</enum>
-              </property>
-             </widget>
-            </item>
-            <item row="3" column="0">
-             <widget class="QLineEdit" name="threshMinBox">
-              <property name="enabled">
-               <bool>false</bool>
-              </property>
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
-              </property>
-              <property name="text">
-               <string>Min. HU threshold: -300 </string>
-              </property>
-             </widget>
-            </item>
-            <item row="4" column="0">
-             <widget class="QLineEdit" name="threshMaxBox">
-              <property name="enabled">
-               <bool>false</bool>
-              </property>
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
-              </property>
-              <property name="text">
-               <string>Min. HU threshold: 300 </string>
-              </property>
-             </widget>
-            </item>
-            <item row="5" column="1">
+            <item row="0" column="1">
              <widget class="QPushButton" name="applyThreshSeg">
               <property name="text">
                <string>Apply threshold</string>
               </property>
              </widget>
             </item>
-            <item row="4" column="1">
-             <widget class="QSlider" name="threshMaxSlider">
-              <property name="minimum">
-               <number>-1024</number>
-              </property>
-              <property name="maximum">
-               <number>3000</number>
-              </property>
-              <property name="value">
-               <number>150</number>
-              </property>
-              <property name="orientation">
-               <enum>Qt::Horizontal</enum>
-              </property>
-             </widget>
-            </item>
-            <item row="6" column="1">
+            <item row="3" column="1" rowspan="4">
              <spacer name="spacer_seg2">
               <property name="orientation">
                <enum>Qt::Vertical</enum>
@@ -6710,25 +6718,6 @@ p, li { white-space: pre-wrap; }
               </property>
              </spacer>
             </item>
-            <item row="0" column="0" rowspan="3" colspan="2">
-             <widget class="QWidget" name="VTK_SegHistView" native="true">
-              <layout class="QGridLayout" name="gridLayout_49">
-               <item row="0" column="0">
-                <spacer name="spacer_seg1">
-                 <property name="orientation">
-                  <enum>Qt::Vertical</enum>
-                 </property>
-                 <property name="sizeHint" stdset="0">
-                  <size>
-                   <width>20</width>
-                   <height>397</height>
-                  </size>
-                 </property>
-                </spacer>
-               </item>
-              </layout>
-             </widget>
-            </item>
            </layout>
           </widget>
           <widget class="QWidget" name="seg_toolBoxPage2">
@@ -6736,8 +6725,8 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>389</width>
-             <height>952</height>
+             <width>342</width>
+             <height>634</height>
             </rect>
            </property>
            <attribute name="label">
@@ -6880,14 +6869,31 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>100</width>
-             <height>30</height>
+             <width>98</width>
+             <height>28</height>
             </rect>
            </property>
            <attribute name="label">
             <string/>
            </attribute>
           </widget>
+         </widget>
+        </item>
+        <item row="3" column="2">
+         <widget class="QLineEdit" name="lineEdit_createStructureSeg">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+          <property name="text">
+           <string>Structure name</string>
+          </property>
+         </widget>
+        </item>
+        <item row="4" column="3">
+         <widget class="QPushButton" name="createSegStructure">
+          <property name="text">
+           <string>Create structure</string>
+          </property>
          </widget>
         </item>
        </layout>
